samples/_failures_safe/1761456134_147ece_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_194713d6.c: In function ‘main’:
./samples/SAFE/__tmp_194713d6.c:152:9: error: expected declaration or statement at end of input
  152 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_194713d6.c:152:9: error: expected declaration or statement at end of input
